--- a/zcms/WebRoot/WEB-INF/web.xml
+++ b/zcms/WebRoot/WEB-INF/web.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:web="http://xmlns.jcp.org/xml/ns/javaee">
+<!DOCTYPE web-app PUBLIC
+ "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+ "http://java.sun.com/dtd/web-app_2_3.dtd">
+
+<web-app>
   <display-name>XML SETTING FILE</display-name>
   <welcome-file-list>
     <welcome-file></welcome-file>
