--- a/zcms/.settings/com.genuitec.eclipse.core.prefs
+++ b/zcms/.settings/com.genuitec.eclipse.core.prefs
@@ -1,3 +1,3 @@
 eclipse.preferences.version=1
-validator.Checked=WebRoot/WEB-INF/web.xml,WebRoot/resource/plugin/ueditor/jsp/config.json
+validator.Checked=WebRoot/WEB-INF/web.xml,WebRoot/WEB-INF/template/admin/guestbook/list.ftl,WebRoot/resource/plugin/ueditor/jsp/config.json
 validator.Unchecked=
